Install pluginbundle deps for Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,8 @@ notifications:
     on_success: always
     on_failure: always
 before_install:
+  - cpanm https://github.com/oalders/dist-zilla-pluginbundle-author-oalders.git || cpanm Dist::Zilla::PluginBundle::Author::OALDERS
   - eval $(curl https://travis-perl.github.io/init) --auto
+cache:
+  directories:
+    - ~/perl5
