Document how to use this module at the command line

--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,7 @@ copyright_year   = 2017
 version = 0.000001
 
 [@Author::OALDERS]
+-remove = Test::Synopsis
 
 [Prereqs / DevelopRequires]
 Perl::Tidy = 20170521
