Let Travis Perl helpers worry about dzil installation

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ notifications:
     on_success: always
     on_failure: always
 before_install:
-  - cpanm https://github.com/oalders/dist-zilla-pluginbundle-author-oalders.git || cpanm Dist::Zilla::PluginBundle::Author::OALDERS
+  - cpanm Code::TidyAll::Plugin::SortLines::Naturally
+  - cpanm Code::TidyAll::Plugin::UniqueLines
   - eval $(curl https://travis-perl.github.io/init) --auto
 cache:
   directories:
