--- a/dist.ini
+++ b/dist.ini
@@ -7,5 +7,8 @@ copyright_year   = 2017
 [@Author::OALDERS]
 -remove = Test::Synopsis
 
+[Prereqs]
+local::lib = 2.000024
+
 [Prereqs / DevelopRequires]
 Perl::Tidy = 20170521
