--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,41 @@
-sudo: false
-language: perl
-perl:
-  - "5.26"
-  - "5.24"
-  - "5.22"
-  - "5.20"
-  - "5.18"
-  - "5.16"
-  - "5.14"
-notifications:
-  email:
-    recipients:
-      - olaf@wundersolutions.com
-    on_success: always
-    on_failure: always
+---
+addons:
+  apt:
+    packages:
+      - aspell
+      - aspell-en
 before_install:
-  - cpanm Code::TidyAll::Plugin::SortLines::Naturally
-  - cpanm Code::TidyAll::Plugin::UniqueLines
-  - eval $(curl https://travis-perl.github.io/init) --auto
+  - 'cpanm Code::TidyAll::Plugin::SortLines::Naturally'
+  - 'cpanm Code::TidyAll::Plugin::UniqueLines'
+  - 'eval $(curl https://travis-perl.github.io/init) --auto'
 cache:
   directories:
-    - ~/perl5
+    - '~/perl5'
+language: perl
+matrix:
+  fast_finish: 'true'
+  include:
+    allow_failures:
+      - dev
+    perl:
+      -
+        env: COVERAGE=1
+        perl: '5.26'
+notifications:
+  email:
+    on_failure: always
+    on_success: always
+    recipients:
+      - olaf@wundersolutions.com
+perl:
+  - '5.10'
+  - '5.12'
+  - '5.14'
+  - '5.16'
+  - '5.18'
+  - '5.20'
+  - '5.22'
+  - '5.24'
+  - '5.26'
+  - dev
+sudo: 'false'
