--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
   - 'cpanm Code::TidyAll::Plugin::SortLines::Naturally'
   - 'cpanm Code::TidyAll::Plugin::UniqueLines'
   - 'eval $(curl https://travis-perl.github.io/init) --auto'
+  - 'AUTHOR_TESTING=0 cpanm Perl::Tidy'
 cache:
   directories:
     - '~/perl5'
@@ -18,10 +19,9 @@ matrix:
       perl: dev
   fast_finish: 'true'
   include:
-    perl:
-      -
-        env: COVERAGE=1
-        perl: '5.26'
+    -
+      env: COVERAGE=1
+      perl: '5.26'
 notifications:
   email:
     on_failure: always
@@ -39,4 +39,5 @@ perl:
   - '5.24'
   - '5.26'
   - dev
+script: 'prove -lr -j$(test-jobs) t'
 sudo: 'false'
