--- a/dist.ini
+++ b/dist.ini
@@ -13,6 +13,9 @@ local::lib = 2.000024
 [Prereqs / DevelopRequires]
 Perl::Tidy = 20170521
 
+[Prereqs / TestRequires]
+LWP = 6.35
+
 [Encoding]
 encoding = bytes
 match = .gz$
