--- a/tidyall.ini
+++ b/tidyall.ini
@@ -1,10 +1,13 @@
 [PerlTidy]
 select = **/*.{pl,pm,t,psgi}
-ignore = blib/**/*
 ignore = .build/**/*
+ignore = blib/**/*
+ignore = lazy-*/**/*
 ignore = t/00-*
 ignore = t/author-*
 ignore = t/release-*
+ignore = t/zzz-*
+ignore = xt/**/*
 ignore = xt/author/{pod-coverage,pod-spell,tidyall}.t
 argv = --profile=$ROOT/perltidyrc
 
