Fix portability tests

--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,7 @@ copyright_year   = 2017
 
 [@Author::OALDERS]
 -remove = Test::Synopsis
+Test::Portability.options = test_one_dot = 0
 
 [Prereqs]
 local::lib = 2.000024
