Don't fail-fast for now

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,7 @@ jobs:
     needs: build-job
     runs-on: 'ubuntu-latest'
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         os: [ubuntu-20.04]
         perl-version:
@@ -92,7 +92,7 @@ jobs:
     needs: ubuntu-test-job
     runs-on: 'macos-latest'
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         os: [macos-latest]
         perl-version:
