--- a/dist.ini
+++ b/dist.ini
@@ -9,13 +9,15 @@ copyright_year   = 2017
 Test::Portability.options = test_one_dot = 0
 
 [Prereqs]
-local::lib = 2.000024
+App::cpm = 0.997011
+local::lib = 2.000029
 
 [Prereqs / DevelopRequires]
-Perl::Tidy = 20170521
+Perl::Tidy = 20220613
 
 [Prereqs / TestRequires]
-LWP = 6.35
+LWP = 6.67
+Test::More = 1.302191
 
 [Encoding]
 encoding = bytes
