--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,21 +32,21 @@ jobs:
         with:
           name: build_dir
           path: build_dir
-  coverage-job:
-    needs: build-job
-    runs-on: ubuntu-20.04
-    container:
-      image: perldocker/perl-tester:5.36
-    steps:
-      - uses: actions/checkout@v3  # codecov wants to be inside a Git repository
-      - uses: actions/download-artifact@v3
-        with:
-          name: build_dir
-          path: .
-      - name: Install deps and test
-        run: cpan-install-dist-deps && test-dist
-        env:
-          CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
+  # coverage-job:
+    # needs: build-job
+    # runs-on: ubuntu-20.04
+    # container:
+      # image: perldocker/perl-tester:5.36
+    # steps:
+      # - uses: actions/checkout@v3  # codecov wants to be inside a Git repository
+      # - uses: actions/download-artifact@v3
+        # with:
+          # name: build_dir
+          # path: .
+      # - name: Install deps and test
+        # run: cpan-install-dist-deps && test-dist
+        # env:
+          # CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
   ubuntu-test-job:
     needs: build-job
     runs-on: 'ubuntu-latest'
@@ -60,15 +60,15 @@ jobs:
           - '5.14'
           - '5.16'
           - '5.18'
-          - '5.20'
-          - '5.22'
-          - '5.24'
-          - '5.26'
-          - '5.28'
-          - '5.30'
-          - '5.32'
-          - '5.34'
-          - '5.36'
+          # - '5.20'
+          # - '5.22'
+          # - '5.24'
+          # - '5.26'
+          # - '5.28'
+          # - '5.30'
+          # - '5.32'
+          # - '5.34'
+          # - '5.36'
     name: perl ${{ matrix.perl-version }} on ${{ matrix.os }}
     steps:
       - name: set up perl
@@ -84,85 +84,85 @@ jobs:
         with:
           cpanfile: 'cpanfile'
           args: '--with-suggests --with-recommends --with-test'
-      - run: prove -lr t
+      - run: prove -lrv t
         env:
           AUTHOR_TESTING: 0
           RELEASE_TESTING: 0
-  macos-test-job:
-    needs: ubuntu-test-job
-    runs-on: 'macos-latest'
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [macos-latest]
-        perl-version:
-          - '5.10'
-          - '5.12'
-          - '5.14'
-          - '5.16'
-          - '5.18'
-          - '5.20'
-          - '5.22'
-          - '5.24'
-          - '5.26'
-          - '5.28'
-          - '5.30'
-          - '5.32'
-          - '5.34'
-          - '5.36'
-    name: perl ${{ matrix.perl-version }} on ${{ matrix.os }}
-    steps:
-      - name: set up perl
-        uses: shogo82148/actions-setup-perl@v1
-        with:
-          perl-version: ${{ matrix.perl-version }}
-      - uses: actions/download-artifact@v3
-        with:
-          name: build_dir
-          path: .
-      - name: install deps using cpm
-        uses: perl-actions/install-with-cpm@v1
-        with:
-          cpanfile: 'cpanfile'
-          args: '--with-suggests --with-recommends --with-test'
-      - run: prove -lr t
-        env:
-          AUTHOR_TESTING: 0
-          RELEASE_TESTING: 0
-  windows-test-job:
-    needs: ubuntu-test-job
-    runs-on: 'windows-latest'
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [windows-latest]
-        perl-version:
-          - '5.14'
-          - '5.16'
-          - '5.18'
-          - '5.20'
-          - '5.22'
-          - '5.24'
-          - '5.26'
-          - '5.28'
-          - '5.30'
-    name: perl ${{ matrix.perl-version }} on ${{ matrix.os }}
-    steps:
-      - name: set up perl
-        uses: shogo82148/actions-setup-perl@v1
-        with:
-          perl-version: ${{ matrix.perl-version }}
-          distribution: strawberry  # this option only used on windows
-      - uses: actions/download-artifact@v3
-        with:
-          name: build_dir
-          path: .
-      - name: install deps using cpm
-        uses: perl-actions/install-with-cpm@v1
-        with:
-          cpanfile: 'cpanfile'
-          args: '--with-suggests --with-recommends --with-test'
-      - run: prove -lr t
-        env:
-          AUTHOR_TESTING: 0
-          RELEASE_TESTING: 0
+  # macos-test-job:
+    # needs: ubuntu-test-job
+    # runs-on: 'macos-latest'
+    # strategy:
+      # fail-fast: false
+      # matrix:
+        # os: [macos-latest]
+        # perl-version:
+          # - '5.10'
+          # - '5.12'
+          # - '5.14'
+          # - '5.16'
+          # - '5.18'
+          # - '5.20'
+          # - '5.22'
+          # - '5.24'
+          # - '5.26'
+          # - '5.28'
+          # - '5.30'
+          # - '5.32'
+          # - '5.34'
+          # - '5.36'
+    # name: perl ${{ matrix.perl-version }} on ${{ matrix.os }}
+    # steps:
+      # - name: set up perl
+        # uses: shogo82148/actions-setup-perl@v1
+        # with:
+          # perl-version: ${{ matrix.perl-version }}
+      # - uses: actions/download-artifact@v3
+        # with:
+          # name: build_dir
+          # path: .
+      # - name: install deps using cpm
+        # uses: perl-actions/install-with-cpm@v1
+        # with:
+          # cpanfile: 'cpanfile'
+          # args: '--with-suggests --with-recommends --with-test'
+      # - run: prove -lr t
+        # env:
+          # AUTHOR_TESTING: 0
+          # RELEASE_TESTING: 0
+  # windows-test-job:
+    # needs: ubuntu-test-job
+    # runs-on: 'windows-latest'
+    # strategy:
+      # fail-fast: false
+      # matrix:
+        # os: [windows-latest]
+        # perl-version:
+          # - '5.14'
+          # - '5.16'
+          # - '5.18'
+          # - '5.20'
+          # - '5.22'
+          # - '5.24'
+          # - '5.26'
+          # - '5.28'
+          # - '5.30'
+    # name: perl ${{ matrix.perl-version }} on ${{ matrix.os }}
+    # steps:
+      # - name: set up perl
+        # uses: shogo82148/actions-setup-perl@v1
+        # with:
+          # perl-version: ${{ matrix.perl-version }}
+          # distribution: strawberry  # this option only used on windows
+      # - uses: actions/download-artifact@v3
+        # with:
+          # name: build_dir
+          # path: .
+      # - name: install deps using cpm
+        # uses: perl-actions/install-with-cpm@v1
+        # with:
+          # cpanfile: 'cpanfile'
+          # args: '--with-suggests --with-recommends --with-test'
+      # - run: prove -lr t
+        # env:
+          # AUTHOR_TESTING: 0
+          # RELEASE_TESTING: 0
