--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,9 @@ copyright_holder = MaxMind, Inc.
 copyright_year   = 2017
 
 [@Author::OALDERS]
+-remove = Test::Mojibake
 -remove = Test::Synopsis
+-remove = MojibakeTests
 Test::Portability.options = test_one_dot = 0
 
 [Prereqs]
