--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
         perl-version:
           - '5.12'
           - '5.14'
@@ -67,24 +67,24 @@ jobs:
           - '5.36'
           - '5.38'
           - '5.40'
-        exclude:
-          - os: windows-latest
-            perl-version: '5.12'
-          - os: windows-latest
-            perl-version: '5.32'
-          - os: windows-latest
-            perl-version: '5.34'
-          - os: windows-latest
-            perl-version: '5.36'
-          - os: windows-latest
-            perl-version: '5.38'
+        # exclude:
+        #   - os: windows-latest
+        #     perl-version: '5.12'
+        #   - os: windows-latest
+        #     perl-version: '5.32'
+        #   - os: windows-latest
+        #     perl-version: '5.34'
+        #   - os: windows-latest
+        #     perl-version: '5.36'
+        #   - os: windows-latest
+        #     perl-version: '5.38'
     name: Perl ${{ matrix.perl-version }} on ${{ matrix.os }}
     steps:
       - name: Set Up Perl
         uses: shogo82148/actions-setup-perl@v1
         with:
           perl-version: ${{ matrix.perl-version }}
-          distribution: strawberry  # this option only used on Windows
+          # distribution: strawberry  # this option only used on Windows
       - uses: actions/download-artifact@v4
         with:
           name: build_dir
@@ -93,6 +93,7 @@ jobs:
         uses: perl-actions/install-with-cpm@v1
         with:
           cpanfile: 'cpanfile'
+          args: '--with-suggests --with-recommends --with-test'
       - run: prove -lr t
         env:
           AUTHOR_TESTING: 0
